--- a/trunk/comp_abstract.tex
+++ b/trunk/comp_abstract.tex
@@ -127,6 +127,7 @@ Virtual\_output &  Detector-like component that writes neutron state
       \hline
        {\bf MCSTAS/samples} & Description \\
        \hline
+  Inelastic\_Incoherent & Inelastic incoherent sample with quasielastic and elastic contributions. \\
   Isotropic\_Sqw & A general S(q,$\omega$) scatterer with multiple scattering, for liquids, powders, glasses, polymers. May be concentrically arranged. Coherent/incoherent, elastic/inelastic scattering. \\
   Phonon\_simple   & Single-crystal sample with acoustic isotropic phonons (simple). \\
   Powder1      &  General powder sample with a single
