--- a/trunk/intro.tex
+++ b/trunk/intro.tex
@@ -69,13 +69,13 @@ ILL later became a part of the core \MCS\ team.
 What makes scientists happy? Probably collect good quality data, pushing the instruments to their limits, and fit that data to physical models.
 Among available measurement techniques, neutron scattering provides a
 large variety of spectrometers to probe structure and dynamics of all
-kinds of materials. 
+kinds of materials.
 
 Unfortunately the neutron flux is often a limitation in the
 experiments. This then motivates instrument responsibles to improve
 the flux and the overall efficiency at the spectrometer positions, and
 even to design new machines. Using both analytical and numerical
-methods, optimal configurations may be found. 
+methods, optimal configurations may be found.
 
 But achieving a satisfactory experiment on the best neutron
 spectrometer is not all. Once collected, the data analysis process
@@ -237,7 +237,7 @@ parts:
 \item Chapter~\ref{s:MCtechniques} concerns Monte Carlo techniques
   and simulation strategies in general
 \item Chapter~\ref{c:running} includes a brief introduction to the
-  \MCS\ system 
+  \MCS\ system
   (section~\ref{s:brief}) as well a section (\ref{s:running}) on running the compiler to produce
   simulations. Section~\ref{s:run-sim} explains how to run the generated
   simulations. Running \MCS\ on parallel computers require special
@@ -267,7 +267,7 @@ parts:
 As of this release of \MCS\, some support for simulating neutron
 polarisation is included. As this is the very first release with these
 features, functionality is likely to change. To reflect this, the
-documentation is currently only available in appendix~\ref{c:polarization}.
+documentation is currently only available in the appendix of the Component manual. %~\ref{c:polarization}.
 A list of library calls that may be used in component definitions
 appears in appendix~\ref{c:kernelcalls}, and
 an explanation of the \MCS\ terminology can be
