--- a/trunk/monochromator.tex
+++ b/trunk/monochromator.tex
@@ -21,3 +21,26 @@ which is presented under Samples, chapter~\ref{c:samples}.
 \index{Optics!Monochromator, thick}
 
 The {\bf Single\_crystal} component may be used to study more complex monochromators, including incoherent scattering, thickness and multiple scattering. Please refer to section \ref{s:Single_crystal}.
+
+\section{Phase space transformer - moving monochromator}
+\index{Optics!phase space transformer}
+
+Eventhough there exist a few attempts to write dedicated phase space transformer components, there exist an elegant way to put a monochromator into move, by mean of the EXTEND keyword. If you define a SPEED parameter for the instrument, the idea is to change the coordinate system before the monochromator, and restore it afterwards, as follow in the TRACE section:
+\begin{verbatim}
+COMPONENT Arm()
+AT ...
+EXTEND %{
+  vx = vx + SPEED; // monochromator moves transversaly by 1000 m/s
+%}
+
+COMPONENT  Monochromator(...)
+AT (0,0,0) RELATIVE PREVIOUS
+
+COMPONENT Arm
+AT (0,0,0) RELATIVE PREVIOUS
+EXTEND  %{
+  vz = vz - SPEED; // puts back neutron in static coordinate frame
+%}
+\end{verbatim}
+This solution does not contain acceleration, but is far enough for most
+studies, and it is very simple.
