--- a/trunk/preface.tex
+++ b/trunk/preface.tex
@@ -14,7 +14,7 @@ It is a pleasure to thank Prof.~Kurt N.~Clausen, PSI, for his continuous
 support to this project and for having initiated \MCS\ in the first
 place. Essential support has also been given by Prof.~Robert McGreevy, ISIS.
 Apart from the authors of this manual, also Prof. Per-Olof \AA strand, NTNU Trondheim,
-has contrubuted to the development of the \MCS\ system.
+has contributed to the development of the \MCS\ system.
 %Both he and our other collaborators, Henrik M.\ R\o nnow and Mark
 %Hagen have made major contributions to the project.  Also the
 %contributions from our test users, the students Asger Abrahamsen, Niels
