--- a/trunk/techniq.tex
+++ b/trunk/techniq.tex
@@ -33,7 +33,7 @@ Mathematically, the Monte-Carlo method is an application of the law of large num
 \lim_{n \rightarrow \infty} \frac{1}{n} \sum_{i=1, a \leq u_i \leq b}^n f(u_i) = \frac{1}{b-a}\int_a^b f(u) du
 \end{equation}
 
-In the case were the $u_i$ values are regularly sampled, we come to the well known midpoint integration rule. In the case were the $u_i$ values are randomly (but regularly) sampled, this is the Monte-Carlo integration technique. As random generators are not perfect, we rather talk about \emph{quasi}-Monte-Carlo technique. We encourage the reader to refer to James \cite{James80} for a detailed review on the Monte-Carlo method.
+In the case were the $u_i$ values are regularly sampled, we come to the well known midpoint integration rule. In the case were the $u_i$ values are randomly (but uniformly) sampled, this is the Monte-Carlo integration technique. As random generators are not perfect, we rather talk about \emph{quasi}-Monte-Carlo technique. We encourage the reader to refer to James \cite{James80} for a detailed review on the Monte-Carlo method.
 
 \section{The neutron weight}
 \label{s:probweight}
