--- a/trunk/virtual_input.tex
+++ b/trunk/virtual_input.tex
@@ -1,4 +1,4 @@
-\section{Vitual\_input: Starting the second part of a split simulation}
+\section{Virtual\_input: Starting the second part of a split simulation}
 \label{virtual_input}
 \index{Sources!Virtual source from stored neutron events}
 
