--- a/trunk/virtual_output.tex
+++ b/trunk/virtual_output.tex
@@ -1,4 +1,4 @@
-\section{Vitual\_output: Saving the first part of a split simulation}
+\section{Virtual\_output: Saving the first part of a split simulation}
 \label{virtual_output}
 \index{Sources!Virtual source, recording neutron events}
 
