--- a/trunk/isotropic_sqw.tex
+++ b/trunk/isotropic_sqw.tex
@@ -6,7 +6,7 @@
 \index{Sample environments}
 \index{Multiple scattering}
 
-\component{Isotropic\_Sqw}{V. Hugouvieux, E. Farhi}{Sqw$\_{coh}$, $\sigma_{coh}$, Sqw$\_{inc}$, $\sigma_{inc}, V_\rho, \sigma_{abs}, T$,$x_{width},y_{height},z_{thick},r_o, r_i$, thickness}{$q_{min}, q_{max}, \omega_{min}, \omega_{max}, d\phi$, order}{partly validated (Vanadium OK, PowderN more accurate for powders) }
+\component{Isotropic\_Sqw}{V. Hugouvieux, E. Farhi}{Sqw$\_{coh}$, $\sigma_{coh}$, Sqw$\_{inc}$, $\sigma_{inc}, V_\rho, \sigma_{abs}, T$,$x_{width},y_{height},z_{thick},r_o, r_i$, thickness}{$q_{min}, q_{max}, \omega_{min}, \omega_{max}, d\phi$, order}{validated (Vanadium, l-Rb, PowderN more accurate for powders) }
 
 \begin{figure}
   \begin{center}
@@ -223,7 +223,7 @@ S_{coh}(q) = \frac{4 \pi \rho}{\sigma_{coh}} \frac{z(q)}{q} |F_q|^2 {\rm\ in\ a\
 for each lattice Bragg peak wave vector $q$.
 The normalisation rule Eq. (\ref{eq:sq-nomr1}) can not usually be applied for powders, as the $S(q)$ is a set of Dirac peaks for which the $\int q^2 S(q) dq$ is difficult to compute, and $S(q)$ does not converge to unity for large $q$.
 
-Of course, the component PowderN (see section \ref{powder}) can handle powder samples more efficiently (faster, better accuracy), but does not take into account multiple scattering and concentric geometries.
+Of course, the component PowderN (see section \ref{powder}) can handle powder samples more efficiently (faster, better accuracy), but does not take into account multiple scattering.
 
 \subsubsection{Important remarks and limitations}
 
@@ -408,6 +408,8 @@ The only restriction is that neutrons that scatter (in $4\pi$) can not come back
 For constant incoherent scattering mode, V\_sample, PowderN, Single\_crystal and Isotropic\_Sqw produce equivalent results, eventhough the two later are more accurate (geometry, multiple scattering). Execution times are equivalent.
 
 Compared with the PowderN component, the $S(q)$ method is twice slower in computation time (but often brings more statistics), and intensity is usually within 20 \%. The PowderN component is intrinsically more accurate as each Bragg peak is handled separately as an exact Dirac peak, with optional $\Delta q$ spreading. In Isotropic\_Sqw, an approximated $S(q)$ table is built from the $F^2$ data, and is coarser.
+
+The Isotropic\_Sqw component has been benchmarked against real experiment for liquid Rubidium (Copley 1974), and the agreement is excellent.
 
 The \verb+Test_Isotropic_Sqw+ test/example instrument exists in the distribution for this component.
 
