--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -10,7 +10,7 @@ list~\cite{mcstas_webpage} or the authors should be contacted.
 {\bf Important note for Windows users:} It is a known problem that some of
 the \MCS\ tools do not support filenames / directories with spaces.
 We are working on a more general approach to this problem, which will
-hopefully be solved in the next release. Also, there are known issues
+hopefully be solved in a further release. Also, there are known issues
 for \MCS\ with recent Perl versions for Windows. We recommand to use
 ActiveState {\bf Perl 5.6}. (Note that as of \MCS\ 1.10, all needed
 support tools for Windows are bundled with \MCS\ in a single installer file.)
@@ -39,7 +39,7 @@ detector as a motor position is varied.
 The output data may be analyzed and visualized in the same way as
 regular experiments by using the data handling and visualisation tools in \MCS\ based on
 Perl and Matlab, Scilab~\cite{scilab_webpage} or PGPLOT. Further data
-output formats including IDL and XML are available, see section \ref{s:analyze}.\index{Tools}
+output formats including IDL, NeXus and XML are available, see section \ref{s:analyze}.\index{Tools}
 
 \begin{figure}[htb!]
 \begin{center}
@@ -156,8 +156,8 @@ will, however, not be released and the modifications are documented on the
 \MCS\ web-page. The extensions of the forthcoming version {\version}.x are also listed
 on the web, and new versions may be released quite frequently when it is requested
 by the user community.
-\item The version 1.11 will contain important new features and an
-  updated manual. It will be released in 2007.
+\item The version 1.12 will contain important new features and an
+  updated manual. It will be released end of 2007/2008.
 \end{itemize}
 
 \section{Running the instrument compiler}
@@ -448,7 +448,7 @@ neutron event files using components
 \item \verb+Virtual_mcnp_input+ and \verb+Virtual_mcnp_output+
 \end{itemize}\index{Vitess} \index{Tripoli} \index{MCNP}
 
-Additionally, adding the \texttt{raw} keyword to the FORMAT will produce raw $[N, p, p^2]$ data sets instead of $[N, p, \sigma]$ (see Section \ref{s:staterror}). The former representation is fully additive, and thus enables to add results from separate simulations (e.g. when using a computer Grid - which is automated in the \verb+mcformat+ tool). Other format acceptable format modifiers are \verb+transpose+ to transpose data matrices and \verb+append+ to catenate data to existing files.
+Additionally, adding the \texttt{raw} keyword to the FORMAT will produce raw $[N, p, p^2]$ data sets instead of $[N, p, \sigma]$ (see Section \ref{s:staterror}). The former representation is fully additive, and thus enables to add results from separate simulations (e.g. when using a computer Grid - which is automated in the \verb+mcformat+ tool). Other acceptable format modifiers are \verb+transpose+ to transpose data matrices and \verb+append+ to catenate data to existing files.
 
 \subsection{Basic import and plot of results}
 \label{s:run-format}
@@ -595,13 +595,13 @@ When choosing the HTML format, the simulation results are saved as a web page, w
       \texttt{HTML} & .html & HTML format (generates a web page, may be used with -f and -d options). Data files are saved as VRML objects (OpenGL). \\
       \texttt{VRML} & .wrl & Virtual Reality file format for data files. Simulation files are not saved properly, and the HTML format should be used preferably. \\
       \texttt{NeXus} & .nxs & NeXus data files (HDF). All simulation results are stored in a unique compressed binary file. This format requires to have NeXus installed.\\
-      {\it Tripoli} &  & \hbox{Tripoli 4 neutron events file format.} \hbox{Use
-        \verb+Virtual_tripoli4_input+/\verb+Virtual_tripoli4_output+} components. \index{Tripoli}\\
-      {\it MCNP} &  & \hbox{MCNP PTRAC neutron events file format.} \hbox{Use
-        \verb+Virtual_mcnp_input+/\verb+Virtual_mcnp_output+} components. \index{MCNP}\\
-      {\it Vitess} &  & \hbox{Vitess neutron events file format.} \hbox{Use \verb+Vitess_input+/\verb+Vitess_output+ components. } \index{Vitess}\\
-      {\it McStas events} & & \hbox{McStas event files in text or binary
-      format.} \hbox{Use \verb+Virtual_input+/\verb+Virtual_output+ components.} \\
+      {\it Tripoli} &  & Tripoli 4 neutron events file format. Use
+        \verb+Virtual_tripoli4_input+/\verb+Virtual_tripoli4_output+ components.\index{Tripoli}\\
+      {\it MCNP} &  & MCNP PTRAC neutron events file format. Use
+        \verb+Virtual_mcnp_input+/\verb+Virtual_mcnp_output+ components.\index{MCNP}\\
+      {\it Vitess} &  & Vitess neutron events file format. Use \verb+Vitess_input+/\verb+Vitess_output+ components.\index{Vitess}\\
+      {\it McStas events} & & McStas event files in text or binary
+      format. Use \verb+Virtual_input+/\verb+Virtual_output+ components.\\
       \hline
     \end{tabular}
     \caption{Available formats supported by \MCS\ simulations. Format modifiers include \emph{binary}, \emph{raw}, \emph{transpose}, \emph{append}.}
@@ -613,7 +613,7 @@ When choosing the HTML format, the simulation results are saved as a web page, w
 \subsection{Interacting with a running simulation}
 \index{Signal handler|textbf}
 
-Once the simulation has started, it is possible, under Unix, Linux and Mac OS X systems, to interact with the on-going simulation.
+Once the simulation has started, it is possible, under Unix, Linux and Mac OS X systems, to interact with the on-going simulation. This feature is not available when using MPI parallelization.
 
 \MCS\ attaches a signal handler to the simulation process. In order to send a signal to the process, the process-id {\it pid} must be known. Users may look at their running processes with the Unix 'ps' command, or alternatively process managers like 'top' and 'gtop'.
 If a {\it file.out} simulation obtained from \MCS\ is running, the process status command should output a line resembling
@@ -718,7 +718,7 @@ mode). Then speficy the instrument parameters to optimize by
 indicating their variation range \verb+param=min,max+ (e.g. Lambda=1,4) just like
 parameter scans. Optionally, the starting guess value might be given with the syntax \verb+param=min,guess,max+. The optimization accuracy criterion is controlled
 using the 'Precision' entry box in the configuration options (See
-Figure \ref{fig:mcgui-choose}. Finally, run the simulation. The optimum
+Figure \ref{fig:mcgui-choose}). Finally, run the simulation. The optimum
 set of parameters is then printed at the end of the simulation
 process. You may ask to maximize only given monitors (instead of all)
 by selecting their component names in the lower lists in the Run Dialog (up to 3).
@@ -781,6 +781,8 @@ The list of available \MCS\ front-end programs may be obtained from the \verb+mc
        mcstas2vitess McStas to Vitess component translation utility
        mcconvert     Matlab <-> Scilab script conversion tool
        mcformat      Conversion tool for text files and MPI/grids
+       mcformatgui   GUI for mcformat
+       mcdaemon      Instrument results on-line plotting
     When used with the -h flag, all tools display a specific help.
     SEE ALSO: mcstas, mcdoc, mcplot, mcrun, mcgui, mcresplot, mcstas2vitess
     DOC:      Please visit http://www.mcstas.org
@@ -808,44 +810,44 @@ visualize the results.
 
 The {\bf File} menu has the following features:
 \begin{description}
-\item[Open instrument] selects the name of an instrument file to be used.
-\item[Edit current] opens a simple editor window with McStas syntax
+\item[File/Open instrument] selects the name of an instrument file to be used.
+\item[File/Edit current] opens a simple editor window with McStas syntax
   highlighting for editing the
   current instrument definition. This function is also available from
   the {\bf Edit} button to the right of the name of the instrument definition in
   the main window.
-\item[Spawn editor] This starts the editor defined in the environment
+\item[File/Spawn editor] This starts the editor defined in the environment
   variable \verb+VISUAL+ or \verb+EDITOR+ on the current instrument
   file. It is also possible to start an external editor manually; in any
   case \verb+mcgui+ will recompile instrument definitions as necessary based on
   the modification dates of the files on the disk.
   \index{Environment variable!EDITOR}
-\item[Compile instrument] forces a recompile of the instrument
+\item[File/Compile instrument] forces a recompile of the instrument
   definition, regardless of file dates. This is for example useful to
   pick up changes in component definitions, which the front-end will not
   notice automatically. This might also be required when choosing MPI \index{MPI|textbf} and NeXus options \index{Tools!NeXus}. See section~\ref{s:install} for how to override
   default C compiler options.
-\item[Save log file] saves the text in the window showing output of
+\item[File/Save log file] saves the text in the window showing output of
   compilations and simulations into a file.
-\item[Clear output] erases all text in the window showing output of
+\item[File/Clear output] erases all text in the window showing output of
   compilations and simulations.
-\item[Quit] exits the graphical user interface front-end.
+\item[File/Quit] exits the graphical user interface front-end.
 \end{description}
 
 \noindent The {\bf Simulation} menu has the following features:
 \begin{description}\index{Tools!mcplot} \index{Data formats}
-\item[Read old simulation] prompts for the name of a file
+\item[Simulation/Read old simulation] prompts for the name of a file
   from a previous run of a McStas simulation (usually called
   \verb+mcstas.sim+). The file will be read and any detector data
   plotted using the \verb+mcplot+ front-end. The parameters used in the
   simulation will also be made the defaults for the next simulation
   run. This function is also available using the ``Read'' button to the
   right of the name of the current simulation data.
-\item[Run simulation] opens the run dialog window, explained
+\item[Simulation/Run simulation] opens the run dialog window, explained
   further below.
-\item[Plot results] plots (using \verb+mcplot+) the results of the
+\item[Simulation/Plot results] plots (using \verb+mcplot+) the results of the
   last simulation run or spawns a load dialogue to load a set of results.
-\item[Configuration options] Opens the choose backend dialog shown in
+\item[Simulation/Configuration options] Opens the choose backend dialog shown in
   figure~\ref{fig:mcgui-choose}. Several settings can be chosen here:
 \begin{itemize}
   \item Selection of  the desired (PGPLOT|Scilab|Matlab|HTML/VRML) output
@@ -854,11 +856,11 @@ The {\bf File} menu has the following features:
   \item One- or three-pane view of your instrument in trace mode when
     using PGPLOT.
   \item Clustering option (None|MPI|ssh)
-  \item Choice of editor to use to when editing instrument files.
+  \item Choice of editor to use when editing instrument files.
   \item Automatic quotation of strings when inserting in the built-in
     editor.
   \item Possibility to \emph{not} optimize when compiling the
-    generated c-code.
+    generated c-code. This is very handy when setting up an instrument model, which requires regular compilations.
   \item Adjustment of final precision when doing parameter optimization.
 \end{itemize}
 \end{description}
@@ -881,11 +883,11 @@ users have modification rights) and loaded. One may then view its source (Edit) 
 
 \noindent The {\bf Tools} menu gathers minor tools.
 \begin{description}
-\item[Plot current/other results] Plot current simulation results and other results.
-\item[Online plotting of results] installs a DSA key to be used for ssh clustering and MPI (see Section \ref{s:run-mpi}).
-\item[Dataset convert/merge] Opens a GUI to the \verb+mcformat+ tool, in order to convert datasets to other formats, merge scattered dataset (e.g. from successive or grid simulations), and assemble scan sets.
-\item[Shortcut keys] displays the shortcut keys used for running and editing instruments.
-\item[Install DSA key] installs a DSA key to be used for ssh clustering and MPI (see Section \ref{s:run-mpi}).\index{MPI}\index{Grid computing}
+\item[Tools/Plot current/other results] Plot current simulation results and other results.
+\item[Tools/Online plotting of results] installs a DSA key to be used for ssh clustering and MPI (see Section \ref{s:run-mpi}).
+\item[Tools/Dataset convert/merge] Opens a GUI to the \verb+mcformat+ tool, in order to convert datasets to other formats, merge scattered dataset (e.g. from successive or grid simulations), and assemble scan sets. This tool does not handle raw event files.
+\item[Tools/Shortcut keys] displays the shortcut keys used for running and editing instruments.
+\item[Tools/Install DSA key] installs a DSA key to be used for ssh clustering and MPI (see Section \ref{s:run-mpi}).\index{MPI}\index{Grid computing}
 \item[The Histogrammer] In addition to these tools, the \verb+Neutron site/Tools/Histogrammer.instr+ example instrument may read McStas, Vitess, MCNP and Tripoli event files in order to generate histograms of any type.
 \end{description}
 
@@ -896,18 +898,18 @@ the \verb+BROWSER+ environment variable. If \verb+BROWSER+ is not set,
 \verb+mcgui+ uses \verb+netscape/mozilla/firefox+ on Unix/Linux and the default browser on
 Windows.
 \begin{description}
-\item[\MCS\ User manual] calls \verb+mcdoc --manual+, brings up the local
+\item[Help/\MCS\ User manual] calls \verb+mcdoc --manual+, brings up the local
   pdf version of this manual, using a web browser.
-\item[\MCS\ Component manual] calls \verb+mcdoc --comp+, brings up the local
+\item[Help/\MCS\ Component manual] calls \verb+mcdoc --comp+, brings up the local
   pdf version of the component manual, using a web browser.
-\item[Component library index] displays the component documentation using
+\item[Help/Component library index] displays the component documentation using
   the component \verb+index.html+ index file.
-\item[\MCS\ web page] calls \verb+mcdoc --web+, brings up the \MCS\
+\item[Help/\MCS\ web page] calls \verb+mcdoc --web+, brings up the \MCS\
   website in a web browser.
-\item[Tutorial] opens the \MCS\ tutorial for a quick start.
-\item[Current instrument info] generates a description web-page of the current edited instrument.
-\item[Test \MCS\ installtion] launches a self test procedure to check that the \MCS\ package is installed properly, generates accurate results, and may use the plotter to display the results.
-\item[Generate component index] (re-)generates locally the component \verb+index.html+.
+\item[Help/Tutorial] opens the \MCS\ tutorial for a quick start.
+\item[Help/Current instrument info] generates a description web-page of the current edited instrument.
+\item[Help/Test \MCS\ installtion] launches a self test procedure to check that the \MCS\ package is installed properly, generates accurate results, and may use the plotter to display the results.
+\item[Help/Generate component index] (re-)generates locally the component \verb+index.html+.
 \end{description}
 
 
@@ -930,24 +932,24 @@ simulation.\index{Tools!mcplot}
 
 The meaning of the different fields is as follows:
 \begin{description}
-\item[Instrument parameters] allows the setting of the values for
+\item[Run:Instrument parameters] allows the setting of the values for
   the input parameters of the instrument. The type of each instrument
   parameter is given in parenthesis after each name. Floating point
   numbers are denoted by (D) (for the C type ``\verb+double+''), (I)
   denotes integer parameters, and (S) denotes strings. For parameter scans and optimizations, enter the minimum and maximum values to scan/optimize, separated by a comma, e.g. \verb+1,10+ and do not forget to set the {\bf \# Scanpoints} to more than 1.
-\item[Output to] allows the entry of a directory for storage of the
+\item[Run:Output to] allows the entry of a directory for storage of the
   resulting data files in (like the \verb+--dir+ option). If no name is
   given, the results are stored in the current directory, to be overwritten
   by the next simulation.
-\item[Force] Forces to overwrite existing data files
+\item[Run:Force] Forces to overwrite existing data files
 \item[Neutron count] sets the number of neutron rays to
   simulate (the \verb+--ncount+ option).
-\item[Gravity] Activates gravitation handling. Be aware that not all
+\item[Run:Gravity] Activates gravitation handling. Be aware that not all
     components support the use of gravitation.
-\item[Random seed/Set seed to] selects between using a random seed (different
+\item[Run:Random seed/Set seed to] selects between using a random seed (different
   in each simulation) for the random number generator, or using a fixed
   seed (to reproduce results for debugging).
-\item[Simulate/Trace (3D)/Optimize] selects between several modes of
+\item[Run:Simulate/Trace (3D)/Optimize] selects between several modes of
   running the simulation:
   \begin{itemize}
   \item Simulate: perform a normal simulation or a scan when \#steps
@@ -958,22 +960,22 @@ The meaning of the different fields is as follows:
     in the given ranges (see section \ref{s:optimize}).
   \item Backgrounding (bg): Simulate or Optimize in the background.
 \end{itemize}
-\item[\# steps / \# optim] sets the number of simulation to run when
+\item[Run:\# steps / \# optim] sets the number of simulation to run when
   performing a parameter scan or the number of iterations to
   perform in optimization mode.
-\item[Plot results] -- if checked, the \verb+mcplot+ front-end will be run
+\item[Run:Plot results] -- if checked, the \verb+mcplot+ front-end will be run
   after the simulation has finished, and the plot dialog will appear
   (see below).
-\item[Format] quick selection of output format. Binary mode may be checked from the ``Simulation/Configuration options'' dialog box.
-\item[Clustering method] selects the mechanism to be used for running on grids and clusters.
+\item[Run:Format] quick selection of output format. Binary mode may be checked from the ``Simulation/Configuration options'' dialog box.
+\item[Run:Clustering method] selects the mechanism to be used for running on grids and clusters.
   See section~\ref{s:run-mpi} on parallel computing for more informations.
-\item[Number of nodes] sets the number of nodes to use for MPI/ssh clustering.
-\item[Inspect component] (Trace mode) will trace only neutron trajectories that reach a given component (e.g. sample or detector).
-\item[First component] (Trace mode) seletcs the first component to plot (default is first) in order to define a region of interest.
-\item[Last component] (Trace mode) seletcs the last component to plot (default is first) in order to define a region of interest.
-\item[Maximize monitor] (Optimization mode) seletcs up to three monitors which integral value should be maximized, varying instrument parameters. If non is selected, all monitors are used.
-\item[Start] runs the simulation.
-\item[Cancel] aborts the dialog.
+\item[Run:Number of nodes] sets the number of nodes to use for MPI/ssh clustering.
+\item[Run:Inspect component] (Trace mode) will trace only neutron trajectories that reach a given component (e.g. sample or detector).
+\item[Run:First component] (Trace mode) seletcs the first component to plot (default is first) in order to define a region of interest.
+\item[Run:Last component] (Trace mode) seletcs the last component to plot (default is first) in order to define a region of interest.
+\item[Run:Maximize monitor] (Optimization mode) seletcs up to three monitors which integral value should be maximized, varying instrument parameters. If non is selected, all monitors are used.
+\item[Run:Start] runs the simulation.
+\item[Run:Cancel] aborts the dialog.
 \end{description}
 
 Before running the simulation, the instrument definition is
@@ -981,7 +983,7 @@ automatically compiled if it is newer than the generated C file (or if the C fil
 is newer than the executable). The executable is
 assumed to have a \verb+.out+ suffix in the filename. NB: If
 components are changed, automatic compilation is \emph{not}
-performed. Use the File->Compile menu item in mcgui.
+performed. Use the File/Compile menu item in mcgui.
 
 
 
@@ -992,9 +994,9 @@ instrument definitions. Apart from the usual editor functions, the
 ``Insert'' menu provides some functions that aid in the construction of
 the instrument definitions:
 \begin{description}
-\item[Instrument template] inserts the text for a simple instrument
+\item[Editor Insert/Instrument template] inserts the text for a simple instrument
   skeleton in the editor window.
-\item[Component\ldots] opens up a dialog window with a list of all
+\item[Editor Insert/Component\ldots] opens up a dialog window with a list of all
   the components available for use in McStas. Selecting a component will
   display a description. Double-clicking will open up a dialog window
   allowing the entry of the values of all the parameters for the
@@ -1005,7 +1007,7 @@ The dialog will also pick up those of the users own components that are
   present in the current directory when \verb+mcgui+ is started. See
   section~\ref{s:mcdoc} for how to write components to integrate well
   with this facility.
-\item[\textit{Type}] These menu entries give quick access to the entry
+\item[Editor Insert/\textit{Type}] These menu entries give quick access to the entry
   dialog for the various component types available, i.e. Sources,
   Optics, Samples, Monitors, Misc, Contrib and Obsolete.
 \end{description}
@@ -1202,11 +1204,11 @@ A 3D view of the instrument, and various operations (zoom, export, print, trace 
 The \verb+--inspect+ option may be used (see previous paragraph), as well as the \verb+--first+ and \verb+--last+ options to specify a region of interest. {\bf Note:} The Scilab plotter for \emph{Windows} does not allow to rotate interactively the 3D view, and you are to use the \emph{alpha} and \emph{theta} choices in the pop-up Dialog.
 
 The \verb+mcdisplay+ front-end will then
-require the Perl+PGPLOT, and either Scilab or Matlab to be installed. \index{Tools!Matlab} \index{Tools!Scilab}
+require the Perl, and either Scilab or Matlab to be installed. \index{Tools!Matlab} \index{Tools!Scilab}
 
 \paragraph{VRML/OpenGL back-ends}
 
-When using the \verb+-pVRML+ option, the instrument is shown in Virtual Reality (using OpenGL). You may then walk aside instrument, or go inside elements following neutron trajectories.
+When using the \verb+-pVRML+ option, the instrument is shown in Virtual Reality (using OpenGL). You may then walk aside instrument, or go inside elements following neutron trajectories. As all neutron trajectories are stored into a VRML file, you better limit the number of stored trajectories below 1000, otherwise file size and processing time becomes significant. The \verb+--inspect+ option is not available in VRML format display.
 
 \subsection{Plotting the results of a simulation (mcplot)}
 \label{s:mcplot}
@@ -1269,7 +1271,9 @@ The corresponding 'mcplot' Matlab and Scilab functions may be called from these 
     matlab or scilab> mcplot(s);
 \end{verbatim} \index{Tools!Matlab} \index{Tools!Scilab}
 A full parameter scan simulation result, or simply one of its scan steps may be displayed using the 'Scan step' menu item.
-When the \verb|+nw| option is specified, a separate Matlab or Scilab window will appear (instead of being launched in the current terminal). This will then enable Java support under Matlab and Tk support under Scilab, resulting in additional menus and tools.
+When the \verb|+nw| option is specified, a separate Matlab or Scilab window will appear (instead of being launched in the current terminal). This will then enable Java support under Matlab and Tk support under Scilab, resulting in additional menus and tools. On the other hand, the \verb|-nw| option will force Matlab/Scilab to run in the current terminal, which is usually faster.
+
+If you experience slow data sets plotting, or even failure, you might try the binary storage format, either from the mcgui/Simulation/Configuration options menu, or specifying e.g. the \verb+-p Scilab_binary+ option from the command line.
 
 To use the \verb+mcplot+ front-end, the programs Perl, and either Scilab or Matlab are required. \index{Tools!Matlab} \index{Tools!Scilab}
 
@@ -1284,7 +1288,7 @@ To use the \verb+mcplot+ front-end, the programs Perl, and either Scilab or Matl
     \includegraphics[angle=-90,width=0.9\textwidth]{figures/mcresplot_PGPLOT.ps}
   \end{center}
 \caption{Output from \texttt{mcresplot} with PGPLOT backend.
-  Use P, C and G keys to write hadrcopy files.}
+  Use P, C and G keys to write hardcopy files.}
 \label{fig:mcresplot_PGPLOT}
 \end{figure}
 
@@ -1328,13 +1332,13 @@ and PDL must all be properly installed on the system.
 \begin{quote}
   \verb|mcdoc|\\
   \verb|mcdoc| {\it comp|instr}\\
-  \verb|mcdoc -l|
+  \verb|mcdoc --tools|
 \end{quote}
-The first example generates an {\it index.html} catalog file using the available components and instruments (both locally, and in the \MCS\ library. When called with the \verb+--show+ or \verb+-s+ option, the library catalog of components is opened using the \verb+BROWSER+ environment variable \index{Environment variable!BROWSER} (e.g. netscape, konqueror, nautilus, MSIE, mozilla, \ldots).
+The first example generates an {\it index.html} catalog file using the available components and instruments (both locally, and in the \MCS\ library). The library catalog of components is opened using the \verb+BROWSER+ environment variable \index{Environment variable!BROWSER} (e.g. netscape, konqueror, nautilus, MSIE, mozilla, \ldots). If the \verb+BROWSER+ is not defined, the help is displayed as text in the current terminal. This latter output may be forced with the \verb+-t+ or \verb+--text+ option.
 
-Alternatively, if a component or instrument {\it comp} is specified, it will be searched within the library, and an HTML help will be created for all available components matching {\it comp}. When using the \verb+-s+, the help will be opened. If the \verb+BROWSER+ is not defined, the help is displayed as text in the current terminal. This latter output may be forced with the \verb+-t+ or \verb+--text+ option.
+Alternatively, if a component or instrument {\it comp} is specified as in the second example, it will be searched within the library, and an HTML help will be created for all available components matching {\it comp}.
 
-The last example will list the name and action of all \MCS\ tools (same as \verb+--tools+ option).
+The last example will list the name and description of all \MCS\ tools.
 
 Additionally, the options \verb+--web+, \verb+--manual+ and \verb+--comp+ will open the \MCS\ web site page, the User Manual (this document) and the Component Manual, all requiring \verb+BROWSER+ to be defined. Finally, the \verb+--help+ option will display the command help, as usual.
 
@@ -1353,14 +1357,14 @@ Any \MCS\ component may be translated for usage with Vitess (starting from Vites
 \end{quote}
 This will create a Vitess module of the given component.
 
-Let us assume the component \verb+Compo+ shall be transferred. The tool first creates a small instrument called \verb+McStas_Compo.instr+ consisting of
+Let us assume the component \verb+Compo+ shall be translated. The tool first creates a small instrument called \verb+McStas_Compo.instr+ consisting of
 \begin{enumerate}
 \item component Vitess\_input
 \item component \verb+Compo+
 \item component Vitess\_output
 \end{enumerate}
 
-This file is parsed to generate the C file \verb+McStas_Compo.c+. The last step is to compile the C-file and build the executable \verb'McStas_compo'. For both steps \MCS\ is used as for any other instrument. \verb'McStas_compo' has to be moved to the directory 'MODULES' that contains all VITESS executables.
+This file is parsed to generate the C file \verb+McStas_Compo.c+. The last step is to compile the C-file and build the executable Vitess module \verb'McStas_compo'. For both steps \MCS\ is used as for any other instrument. \verb'McStas_compo' has to be moved to the directory 'MODULES' that contains all VITESS executables.
 
 Additionally, a file \verb'McStas_compo.tcl' is created that contains (most of) what is needed to get a GUI window in VITESS. To obtain that, the content of this file has to added into 'vitess.tcl'. To make it accessible within the given GUI structure of VITESS, it is necessary to add the name 'compo' - NO capital letters ! - to one of the folders in 'proc makeModuleSets{}' (beginning of 'vitess.tcl').
 
@@ -1397,7 +1401,7 @@ to translate files into format FORMAT. When given a directory, the translation w
 
 The \verb+--merge+ option may be used to merge similar files, e.g. obtained from grid systems, just as if a longer run was achieved.
 
-The \verb+--scan+ option may be used to reconstruct the scan data from a set of directories which vary instrument parameters. For instanmce, you ran a scan, but finally realized you should have prolongated it. Then simply simulate the missing bits, and apply \verb+mcformat -d scan_data --format=PGPLOT --scan step0 .. stepN+. The resulting scan data is compatible with \verb+mcplot+ only when generating PGPLOT/McStas format.\index{Tools!mcplot} You may conjugate this option with the \verb+--merge+ in order to add/merge similar data sets before re-building the scan.
+The \verb+--scan+ option may be used to reconstruct the scan data from a set of directories which vary instrument parameters. For instance, you ran a scan, but finally realized you should have prolongated it. Then simply simulate the missing bits, and apply \verb+mcformat -d scan_data --format=PGPLOT --scan step0 .. stepN+. The resulting scan data is compatible with \verb+mcplot+ only when generating PGPLOT/McStas format.\index{Tools!mcplot} You may conjugate this option with the \verb+--merge+ in order to add/merge similar data sets before re-building the scan.
 
 The data files are analyzed by searching keywords inside data files (e.g. 'Source' for the source instrument description file). If some filenames or component names match these keywords (e.g. using a file 'Source.psd'), the extracted metadata information may be wrong, eventhough the data itself will be correct.\index{Bugs}
 
@@ -1409,7 +1413,7 @@ To analyze simulation results, one uses the same tools as for analyzing
 experimental data, \textit{i.e}. programs such as IDL, Matlab and Scilab.
 The output files from simulations are usually simple text files containing headers and data blocks. If data blocks are empty they may be accessed refering to an external file indicated in the header. This file may also be a binary file (except with the original \MCS /PGPLOT format), which does not contain any header (except if simulation is launched with \verb|+a| option), but are in turn smaller in size and faster to import.
 
-In order for the user to choose the data format, we recommand to set it using the \verb+--format=FORMAT+ or alternatively {\it via} the MCSTAS\_FORMAT environment variable, which will also make the front-end programs able to import and plot data and instrument consistently (see Section \ref{s:run-sim}. The available format list is shown in Table~\ref{t:formatoptions}. \index{Environment variable!MCSTAS\_FORMAT}
+In order for the user to choose the data format, we recommand to set it using the \verb+--format=FORMAT+ or alternatively {\it via} the MCSTAS\_FORMAT environment variable, which will also make the front-end programs able to import and plot data and instrument consistently (see Section \ref{s:run-sim}). The available format list is shown in Table~\ref{t:formatoptions}. \index{Environment variable!MCSTAS\_FORMAT}
 
 Note that the neutron event counts in detectors is typically not very
 meaningful except as a way to measure the performance of the
@@ -1470,7 +1474,7 @@ inside the \verb+mcstas.sim+ file instead of in separate files.
 With these formats \MCS\ automatically writes scripts containing the data as a structure, as well as in-line import and plot functions for the selected language. Usage examples are given in section~\ref{s:run-sim}.
 Thus, it is not necessary to write a load routine for each format, as the script is itself a program that knows how to handle the data. Alternatively, using \verb+mcplot+ with Matlab and Scilab plotters provide additional functionalities from menus and dialogs (see section~\ref{s:mcplot}).
 
-When imported through the data generated script (see section~\ref{s:run-sim}), or using \verb+mcplot+ (see section~\ref{s:mcplot}), a single variable may be created into the Matlab, Scilab or IDL base workspace. This variable is a \emph{structure} constituting a data tree containing many fields, some being themselves structures. Field names are the initial names from the instrument (components, files, \ldots), transformed into valid variable names, e.g containing only letters, digits and the '\_' character, except for the first character which may only be a letter\footnote{For instance in most case, the simulation location is './mcstas.m' which turns into field 'm\_mcstas'.}.
+When imported through the data generated script (see section~\ref{s:run-sim}), or using \verb+mcplot+ (see section~\ref{s:mcplot}), a single variable may be created into the Matlab, Scilab or IDL base workspace. This variable is a \emph{structure} constituting a data tree containing many fields, some being themselves structures. Field names are the initial names from the instrument (components, files, \ldots), transformed into valid variable names, e.g containing only letters, digits and the '\_' character, except for the first character which may only be a letter. When using Matlab, an 'm\_' is appended to avoid name clash with existing Matlab commands/variables.\footnote{For instance in most case, the simulation location is './mcstas.m' which turns into field 'm\_mcstas'.}.
 In this tree, you will find the monitor names, which fields contain the monitored data. The usual structure is
 \begin{quote}
   \texttt{s.{\it instrument}.{\it simulation}.{\it comp\_name}.{\it file\_name}}
@@ -1511,7 +1515,7 @@ The latter example accesses the data from the 'monitor1.y\_kz' file written by t
 \subsection{HTML/VRML and XML formats}
 \index{Tools!HTML} \index{Tools!VRML} \index{Data formats}
 
-Both HTML and XML formats are available. The former may be viewed using any web browser (Netscape, Internet Explorer, Nautilus) - showing data sets as VRML objects - while the latter may be browsed for instance using Internet Explorer (Windows and Mac OS) or GXMLViewer and KXMLEditor (under Linux).
+Both HTML and XML formats are available. The former may be viewed using any web browser (Netscape/Mozilla/Firefox, Internet Explorer, Nautilus, Konqueror) - showing data sets as VRML objects. XML data sets may be browsed for instance using Internet Explorer (Windows and Mac OS) or Firefox, GXMLViewer and KXMLEditor (under Linux).
 
 The XML format is NeXus-like, but not fully compatible. However, \MCS\ may generate genuine NeXus/HDF format (see bellow).
 
@@ -1525,7 +1529,7 @@ The NeXus format~\cite{nexus_webpage} is a platform independent HDF binary data 
 \item the \MCS\ installation should be done with NeXus bindings, e.g. on Unix/Linux systems \verb+configure --with-nexus; make; make install+.
 \item  the compilation of instruments must be done with the \verb+-DHAVELIB_NEXUS -lNeXus+ flag (see Section \ref{s:nexus}). This is automated with the \verb+mcrun+ tool (Section \ref{s:mcrun}).
 \end{enumerate}
-. To link the instrument with these libraries, the . All results are saved in a single file, containing 'groups' of data. To view such files, install and use HDFView. This Java viewer can show content of all detectors, including metadata (attributes). Basic detector images may also be generated.
+All results are saved in a single file, containing 'groups' of data. To view such files, install and use HDFView (or alternatively HDFExplorer). This Java viewer can show content of all detectors, including metadata (attributes). Basic detector images may also be generated.
 
 \section{Using computer Grids and Clusters}
 \label{s:run-mpi}
@@ -1731,9 +1735,7 @@ every node.
 
 \begin{itemize}
 \item Signals are \emph{not} supported while simulating with MPI (since
-  asynchroneous events cannot be easily transmitted to all nodes). Anyway,
-  depending on the MPI implementation, you may force all nodes to synchronize
-  and save data using the HUP signal (\verb'kill -HUP mcstasPID').
+  asynchroneous events cannot be easily transmitted to all nodes).
 \item Some header of output files might contain minor errors
 \item The computation split does not take into account the speed or the
   load of nodes: the overall time of a distributed computation is
@@ -1746,6 +1748,7 @@ every node.
   have to set ssh keys to avoid use of passwords; if
   using \verb'rsh', you have to set a \verb'.rhosts' file
 \item When reading external data files during the TRACE (specially virtual sources) all nodes might access the same data, potentially producing wrong results. We do not recommand using MPI when reading virtual sources.
+\item \MCS\ with MPI support was demonstrated to run efficiently up to 10 machines. Above this value, communication issues between nodes may arise, depending on the architecture and network capabilities, particularly when running scans of parameters.\index{Bugs}
 \end{itemize}
 
 \subsection{Parallel computing (multi-threading)}
